# bobawallet

./: .gitignore  Cargo.toml  README.md
docs/: todos.md
src/: assets.rs  lib.rs  main.rs  panel.rs  theme.rs
src/components/: assets.rs  command_palette.rs  footer.rs  header.rs  mod.rs
src/config/: accounts.rs  mod.rs
