[package]
name = "bobawallet"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.30"
anyhow = "1.0.99"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
global-hotkey = "0.7.0"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.143"
